# ELDAmwl

./: .codeclimate.yml  .coveragerc  .flake8  .hgignore  .secrets.yaml  .travis.yml  CHANGES.rst  CONTRIBUTORS.rst  ELDAmwl.odp  LICENSE  LICENSE.rst  Pipfile  README.rst  SCCinterface_for_ELDAmwl.odp  pyproject.toml  requirements.txt  settings.yaml  setup.py  update_SCC_db.sql
.github/workflows/: main.yml  testing.yml  tests.yml
ELDAmwl/: __init__.py  config.py  header.py  main.py  prepare_signals.py  products.py  rayleigh.py  signals.py
ELDAmwl/angstroem_exponent/: operation.py  params.py  product.py
ELDAmwl/bases/: base.py  columns.py  factory.py
ELDAmwl/component/: interface.py  plugins.py  registry.py  setup.py
ELDAmwl/configs/: __init__.py  config_default.py  config_example_linux.py
ELDAmwl/database/: db.py  db_functions.py
ELDAmwl/depol/: operation.py  params.py  product.py
ELDAmwl/elda_mwl/: compile_mwl_product.py  do_quality_control.py  elda_mwl.py  get_basic_products.py  get_derived_products.py  get_lidar_constants.py  mwl_products.py
ELDAmwl/errors/: error_codes.py  exceptions.py
ELDAmwl/extinction/: operation.py  params.py  product.py
ELDAmwl/factories/: __init__.py  backscatter_factories.py  elast_bsc_factories.py  elda_mwl_factories.py  extinction_factories.py  get_basic_products.py  get_derived_products.py  lidar_ratio_factories.py  monte_carlo.py  mwl_product_factories.py  raman_bsc_factories.py
ELDAmwl/lidar_constant/: operation.py  product.py
ELDAmwl/lidar_ratio/: operation.py  params.py  product.py
ELDAmwl/log/: log.py
ELDAmwl/main/: elda_mwl.py  get_basic_products.py  get_derived_products.py  mwl_products.py
ELDAmwl/monte_carlo/: monte_carlo.py  operation.py  parallel_funcs.py
ELDAmwl/operations/: __init__.py  elda_mwl.py  get_derived_products.py  monte_carlo.py
ELDAmwl/output/: create_dummy_ELDamwl_file.py  mwl_file_structure.py  write_mwl_output.py
ELDAmwl/plugins/: PrepareExtSignalsBetter.py  SavitzkyGolaySlope.py
ELDAmwl/sandbox/: bsc_after_smooth.nc  bsc_before_smooth.nc  savgo.py
ELDAmwl/storage/: cached_functions.py  data_storage.py
ELDAmwl/tests/: config.py  disable_test_elda_mwl_factories.py  pickle_data.py  test_factory.py  test_params.py  test_registry.py  test_signals.py
ELDAmwl/utils/: constants.py  graph.py  misc.py  numerical.py  (+2 more)
docs/: DataStorage.odg  ELDAmwl.configs.rst  ELDAmwl.database.rst  ELDAmwl.database.tables.rst  ELDAmwl.rst  ELDAmwl.tests.rst  conf.py  index.rst  modules.rst  requirements.txt  schematics.odg
(+295 files in other folders)
