[tool.poetry]
name = "ELDAmwl"
version = "0.1.0"
description = "ELDA multi wavelengt SCC module"
authors = ["Ina Mattis <ina.mattis@dwd.de>"]

packages = [
    {include = "ELDAmwl"}
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
addict = "2.4.0"
colorlog = "^4.2.1"
dynaconf = "^3.1.7"
isort = "^5.5.0"
joblib = "^1.1.0"
numpy = "^1.19.1"
netCDF4 = "^1.5.4"
objsize = "^0.3.3"
pandas ="^1.1.1"
pymysql = "^0.10.0"
PyYAML = "^5.4.1"
sqlalchemy = "^1.3.19"
SQLAlchemy-Utils = "^0.36.8"
scipy = "^1.5.2"
xarray = "^0.19.0"
"zope.interface" = "^5.4.0"
"zope.component" = "^5.0.1"
matplotlib = "^3.5.0"


[tool.poetry.dev-dependencies]
autodocsumm = "^0.2.7"
coveralls = "^3.2.0"
pylint = "^2.13.9"
pytest = "^6.0.1"
pytest-mock = ">=3.7.0"
pytest-cov = ">=3.0.0"
sphinx = "^5.1.1"
sphinxcontrib-qthelp = "^1.0.3"
sphinxcontrib-serializinghtml = "^1.1.4"
sphinx-rtd-theme = "^1.1.1"
coverage = "^6.5.0"
# rayleigh_fit = {path="../rayleigh_fit", develop=true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elda_mwl = "ELDAmwl.main:run"
elda_gen_test = "ELDAmwl.tests.fixtures:run"
